--- a/src/app/general/components/forum-page/forum-page.component.css
+++ b/src/app/general/components/forum-page/forum-page.component.css
@@ -26,7 +26,8 @@
 .answers-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 1.5rem;
+  grid-column-gap: 2%;
+  grid-row-gap: 3%;
   margin-top: 1.5rem;
 }
 
