--- a/src/app/general/components/forum-page/forum-page.component.html
+++ b/src/app/general/components/forum-page/forum-page.component.html
@@ -1,4 +1,9 @@
 <div class="main-container">
+
+  <div class="search">
+    Buscador
+  </div>
+
   <h1 class="main-title">Foro de preguntas</h1>
   <p class="description">Encuentra preguntas y ayuda para problemas de tus mascotas</p>
 
