Ya funciona la redirección con las palabras clave de la nueva pregunta generada

--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -57,6 +57,7 @@
         <button
           class="send-btn pointer"
           id="more-btn"
+          (click)="goToForum()"
         >
           Ver más preguntas
         </button>
