Añadidos modales en los formularios para confirmar la creación de las entidades

--- a/src/app/staff/components/add-pet/add-pet.component.css
+++ b/src/app/staff/components/add-pet/add-pet.component.css
@@ -124,3 +124,57 @@ label {
   transform: translateY(-2px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  transition: opacity 0.3s ease-out;
+}
+
+.modal-content {
+  background: #333;
+  color: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.modal-text {
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.icon {
+  color: #00c853; /* Green for success */
+  font-size: 60px;
+}
+
+.close-btn {
+  background-color: #007bff; /* Blue for action */
+  color: #fff;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  cursor: pointer;
+  font-size: 1.1em;
+}
+
+.close-btn:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
