--- a/src/app/staff/components/add-pet/add-pet.component.html
+++ b/src/app/staff/components/add-pet/add-pet.component.html
@@ -89,3 +89,19 @@
     </form>
   </div>
 </div>
+
+@if ( exit ) {
+  <div class="modal">
+    <div class="modal-content">
+      <i class="icon material-icons">check</i>
+      <p class="modal-text">Mascota añadida correctamente</p>
+      <button
+        class="close-btn pointer"
+        id="close-btn"
+        (click)="exit = false"
+      >
+        Cerrar
+      </button>
+    </div>
+  </div>
+}
