--- a/src/app/user/components/pets/pets.component.css
+++ b/src/app/user/components/pets/pets.component.css
@@ -3,6 +3,10 @@
   color: #f0f0f0;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .upper-part {
   padding-bottom: 40px;
   text-align: center;
