--- a/src/app/staff/components/clients/clients.component.html
+++ b/src/app/staff/components/clients/clients.component.html
@@ -1,29 +1,36 @@
 <div class="main-content">
 
-  @if (clients.length > 0 ) {
-    <div class="cards-div">
-      @for (client of clients; track $index) {
-        <div class="card"
-          routerLink="/staff/client-info/{{ client.id }}"
-        >
+  <div class="upper-part">
+    <h2>Mis Clientes</h2>
+    <p>En esta sección podrás ver todos tus clientes registrados en el sistema.</p>
+  </div>
 
-          <div class="photo">
-            Foto Usuario
-          </div>
-
-          <div class="pet-info">
-            <p>{{ client.name }}</p>
-            <p>{{ client.email }}</p>
-            <p>{{ client.phone }}</p>
-            <p>{{ client.dni }}</p>
-          </div>
-
-        </div>
-      }
+  @if( clients.length > 0 ) {
+    <div class="clients-table-container">
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Teléfono</th>
+            <th>DNI</th>
+            </tr>
+        </thead>
+        <tbody>
+          @for (client of clients; track $index) {
+            <tr routerLink="/staff/client-info/{{ client.id }}">
+              <td>{{ client.name }}</td>
+              <td>{{ client.email }}</td>
+              <td>{{ client.phone }}</td>
+              <td>{{ client.dni }}</td>
+            </tr>
+          }
+        </tbody>
+      </table>
     </div>
   } @else {
     <div class="no-clients">
-      <h2>No tienes clientes asignados</h2>
+      <p>¡Parece que aún no tienes clientes registrados!</p>
     </div>
   }
 
